2008-08-09  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/lob.c: fix OCI8::LOB#size= when using a lob over 2GB.
	    fix the return value of OCI8::LOB#write when writing a string
	    over 2GB.

2008-08-05  KUBO Takehiro  <kubo@jiubao.org>
	* test/config.rb, test/test_all.rb, test/test_array_dml.rb,
	  test/test_bind_raw.rb, test/test_bind_time.rb, test/test_break.rb,
	  test/test_clob.rb, test/test_connstr.rb, test/test_datetime.rb,
	  test/test_dbi.rb, test/test_dbi_clob.rb, test/test_metadata.rb,
	  test/test_object.rb, test/test_oci8.rb, test/test_oradate.rb,
	  test/test_oranumber.rb, test/test_rowid.rb:
	    fix to run tests in directories outside of 'test' directory.

2008-08-04  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/attr.c: If ORA-01000 (maximum open cursors exceeded) when
	    converting a rowid descriptor to string representation, run
	    GC to cleanup unreferenced statement handles and try again.
	* ext/oci8/oci8.h, ext/oci8/oci8lib.c: add a utility function
	    oci8_exec_sql() to execute a SQL statement in C.
	* ext/oci8/encoding.c: use oci8_exec_sql() to run anonymous PL/SQL
	    blocks in oci8_charset_id2name() and oci8_charset_name2id().
	* ext/oci8/bind.c, ext/oci8/metadata.c, ext/oci8/ocidatetime.c,
	  ext/oci8/ocinumber.c: suppress compiler warnings.
	* ext/oci8/oci8.c: avoid "[BUG] object allocation during garbage
	    collection phase" when using ruby 1.9. In GC, just free a
	    session handle without rollback.

2008-08-02  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.h, ext/oci8/ocidatetime.c, lib/oci8.rb.in,
	  lib/oci8/datetime.rb: change binding code for timestamps
	    and intervals. C side is a thin wrapper which converts Oracle's
	    date, timestamp and interval values to ruby arrays and vise
	    versa. Ruby side converts the arrays to ruby's Time, DateTime,
	    Integer (for interval year to month) and Rational (for interval
	    day to second).
	* lib/oci8/oci8.rb: change mapping for binding date, timestamp and